--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Welcome to Recipe Finder</title>
+    <title>MASAK'O</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -19,9 +19,9 @@
       <div class="nav-container">
         <span class="logo">MASAK'O!</span>
         <nav class="main-nav">
-          <a href="index.html">Home</a>
-          <a href="recipes.html">All Recipes</a>
-          <a href="login.html" class="btn-login">Login</a>
+          <a href="index.html">home</a>
+          <a href="recipes.html">recipes</a>
+          <a href="login.html" class="btn-login">login</a>
         </nav>
       </div>
     </header>
@@ -43,13 +43,35 @@
           <div class="autoscroll-track"></div>
         </div>
       </section>
-      <footer class="main-footer">
+      <section class="articles-section">
         <div class="container">
-          <p>&copy; 2025 MASAK'O! &mdash; All Rights Reserved.</p>
+          <h2>Artikel Pilihan</h2>
+          <div class="articles-container">
+            <div class="article-card">
+              <img src="https://cdn.dummyjson.com/recipe-images/3.webp" alt="Dessert Cookies">
+              <div class="article-content">
+                <h3>5 Resep Dessert Terenak, Nomor 1 Bikin Kaget!</h3>
+                <p>Penasaran? klik untuk baca artikel</p>
+                <a href="#" class="btn-baca">Baca</a>
+              </div>
+            </div>
+            <div class="article-card">
+              <img src="https://cdn.dummyjson.com/recipe-images/1.webp" alt="Pizza Margherita">
+              <div class="article-content">
+                <h3>Sejarah Pizza Margherita, Ternyata Asli Garut!?!!</h3>
+                <p>Penasaran? klik untuk baca artikel</p>
+                <a href="#" class="btn-baca">Baca</a>
+              </div>
+            </div>
+          </div>
         </div>
-      </footer>
+      </section>
     </main>
-
+    <footer class="main-footer">
+      <div class="container">
+        <p>&copy; 2025 MASAK'O! &mdash; All Rights Reserved.</p>
+      </div>
+    </footer>
     <script src="home.js"></script>
   </body>
 </html>
