--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
       <div class="nav-container">
         <span class="logo">MASAK'O!</span>
         <nav class="main-nav">
-          <a href="index.html">home</a>
-          <a href="recipes.html">recipes</a>
-          <a href="login.html" class="btn-login">login</a>
+          <a href="index.html">Home</a>
+          <a href="recipes.html">Recipes</a>
+          <a href="login.html" class="btn-login">Login</a>
         </nav>
       </div>
     </header>
